XMLtoCSV/objects/unpackaged/objects/EM_Attendee_vod__c.object
<CustomObject>
    <description>Attendees at events for Veeva Events Management</description>
    <fields>
        <fullName>Account_Credentials_PY__c</fullName>
        <description>Formula to associate account credentials</description>
        <formula>Text( Account_vod__r.Credentials_vod__c )</formula>
        <label>Account Credentials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_PC__c</fullName>
        <description>Evaluates Prescriber/NonPresciber Account Type through Attendee Credential field</description>
        <formula>IF( Text(Credential_PC__c) = &quot;APRN&quot;,&quot;Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;DO&quot;,&quot;Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;MD&quot;,&quot;Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;ND&quot;,&quot;Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;NP&quot;,&quot;Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;PA&quot;,&quot;Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;PharmD&quot;, NPI_PC__c !=&quot;&quot;),&quot;Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;PharmD&quot;,  SLN_1_PC__c  !=&quot;&quot;),&quot;Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;RpH&quot;, NPI_PC__c !=&quot;&quot;),&quot;Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;RpH&quot;,  SLN_1_PC__c  !=&quot;&quot;),&quot;Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Associate Medical Director&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Billing specialist&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;BSN&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Business Office Manager&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Chair for payor/benefit plan&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Chief Medical Officer&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Director of Outpatient Department&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Director of Reimbursement&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Formulary Committee Member&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Medical Director&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Medical Student&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Nurse Navigator&quot;,&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;PharmD&quot;, NPI_PC__c =&quot;&quot;),&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;PharmD&quot;,  SLN_1_PC__c  =&quot;&quot;),&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;RpH&quot;, NPI_PC__c =&quot;&quot;),&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;RpH&quot;,  SLN_1_PC__c  =&quot;&quot;),&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;PhD Researcher&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Reimbursement specialist&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;RN&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Study Coordinator&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Director Trade Relations&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Pharmacy Department Administrators&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Manager Corporate Pharmacy Department&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Executive Director&quot;,&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;Pharmacoeconomist&quot;, NPI_PC__c =&quot;&quot;),&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;Chief of Pharmacy&quot;,  SLN_1_PC__c  =&quot;&quot;),&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;Associate Chief of Pharmacy&quot;),&quot;Non Prescriber&quot;,
IF( AND(Text(Credential_PC__c) = &quot;Director of ACOs&quot;),&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Clinical Pharmacist&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Pathways Medical Director&quot;,&quot;Non Prescriber&quot;,
IF( Text(Credential_PC__c) = &quot;Pathways Pharmacy Director&quot;,&quot;Non Prescriber&quot;,
&quot;N/A&quot;)))))))))))))))))))))))))))))))))))))))))</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account acting as an Attendee.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name_vod__c</fullName>
        <description>Text field to store the name of an attendee. Used for entering non-system attendees. If an account, user, or contact is listed as an attendee, this field populates automatically.</description>
        <label>Attendee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_PY__c</fullName>
        <formula>IF(PCYC_JBI_Employee_PC__c, &quot;Employee&quot;,IF (Speaker_PY__c , &quot;Speaker&quot;, (IF(LEN( Account_vod__c) &gt; 0, &quot;Account&quot;, IF(LEN( Contact_vod__c) &gt; 0, &quot;Contact&quot;, IF(LEN( User_vod__c) &gt; 0, &quot;Employee&quot;, &quot;Unreconciled Attendee&quot;) )))))</formula>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>This field defines what type of Attendee has been selected for the Event. This formula can be modified to meet the naming conventions of a Customer&apos;s organization.</description>
        <formula>IF(NOT(ISBLANK(Account_vod__c)), $Label.ACCOUNT_vod, 
                IF(NOT(ISBLANK(Contact_vod__c)), $Label.CONTACT_vod, 
                IF(NOT(ISBLANK(User_vod__c)), $Label.USER_vod, 
                IF(NOT(ISBLANK(TEXT(Walk_In_Status_vod__c))), $Label.WALK_IN_vod, 
                $Label.ONLINE_REGISTRANT_vod))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>Used to store the attendee&apos;s city.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact attending the event.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_Contact_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credential_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture Walk-In Attendee Credentials</description>
        <label>Credential</label>
        <picklist>
            <picklistValues>
                <fullName>APRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Chief of Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair for payor/benefit plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Medical Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of ACOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Outpatient Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director Trade Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Corporate Pharmacy Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Navigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathways Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathways Pharmacy Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacoeconomist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Department Administrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PharmD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Attendee Credentials. If the attendee is an Account, this data is copied from the Credentials_vod field on the account.</description>
        <label>Credentials</label>
        <picklist>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>Used to store the attendee&apos;s email address.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the attendee such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event that the attendee has been invited to.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Firigana for Japanese name. If the attendee is an Account, this data is copied from the Furigana field on the account.</description>
        <label>Furigana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA__c</fullName>
        <description>PCYC Events Attendee Government Affiliation</description>
        <label>Government Affiliation (if any)</label>
        <picklist>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Used to store the attendee&apos;s last name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Text field to capture Middle Initial of Walk-in attendee</description>
        <label>Middle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if an attendee has opted in to receiving a meal.</description>
        <label>Meal Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Preference_vod__c</fullName>
        <description>Meal preference of an attendee. Custom values can be added to this picklist.</description>
        <label>Meal Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPI_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Text field to capture NPI for walk-in attendees</description>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVA__c</fullName>
        <description>PCYC Events Name of VA</description>
        <label>If Veteran Affairs, Name of VA Hospital</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Registration_Status_vod__c</fullName>
        <description>This field is populated automatically to &quot;Needs Reconciliation&quot; when a person is registered for an event via the Veeva Attendee API. The status can be set manually via this API, and is also set through the user interface when an online event registrant is reconciled to a CRM record.</description>
        <label>Online Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs_Reconciliation_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_New_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Organization name of the attendee</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_vod__c</fullName>
        <description>The organization an attendee is representing.</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Employee_PC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCYC Events - Identifies attendee as JBI Employee</description>
        <label>PCYC/JBI Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <description>Used to store the attendee&apos;s phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Practice_Hosp_Affil_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Text field to capture Practice / Hospital Affiliation for walk-in attendees</description>
        <label>Practice / Hospital Affiliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescriber_vod__c</fullName>
        <description>Indicates if an attendee is a prescriber or not.</description>
        <label>Prescriber</label>
        <picklist>
            <picklistValues>
                <fullName>Yes_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLN_1_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Text field to capture State License Number # 1 for Walk-in attendees</description>
        <label>State License # - 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLN_2_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Text field to capture State License Number # 2 for Walk-in attendees</description>
        <label>State License # - 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLN_3_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Text field to capture State License Number # 3 for Walk-in attendees</description>
        <label>State License # - 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLN_ST_1_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture state of SLN # 1 for walk-in attendees</description>
        <label>State License State - 1</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLN_ST_2_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture state of SLN # 2 for walk-in attendees</description>
        <label>State License State - 2</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLN_ST_3_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture state of SLN # 3 for walk-in attendees</description>
        <label>State License State - 3</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores the Datetime of when the Signature was captured</description>
        <label>Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Used to store the Signature.</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signee_vod__c</fullName>
        <description>The name of the person signing for event attendance.</description>
        <label>Signee</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_PY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture Speciality for Event Walk-in Attendees</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Abdominal Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abdominal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acupuncture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care Pediatrics (APNs only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Psychology &amp; Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine (Family Medicine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine (Internal Medicine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine (Pediatrics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Congenital Heart Disease (IM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Health (APNs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Reconstructive Orthopedics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Heart Failure &amp; Transplant Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Practice Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Surgical Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy &amp; Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomic Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomic/Clinical Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bariatric Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biochemical &amp; Medical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banking /Transfusion Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Certified Sleep Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>